# docker_gauss_newton_detector

./: .gitignore  .gitmodules  Dockerfile  README.md  build.sh  run_cv.sh
src/gauss_newton_detector/: CMakeLists.txt  main.cpp  theta_kernel.hpp
src/open_cv_shift/: CMakeLists.txt  main.cpp
src/open_cv_test/: CMakeLists.txt  main.cpp
src/similarity_transformation/: main.cpp
